syntax = "proto3";
package common;

option go_package = "github.com/veraison/common";
import "google/protobuf/struct.proto";

import "attestation_format.proto";

message EvidenceContext {
	int64 tenant_id = 1 [json_name = "tenant-id"];
	string trust_anchor_id = 2 [json_name = "trust-anchor-id"];
	string software_id = 3 [json_name = "software-id"];
	AttestationFormat format = 4 [json_name = "attestation-format"];
	google.protobuf.Struct evidence = 5;
}
